--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,16 @@
 		<repository>
 			<id>shibboleth</id>
 			<name>Shibboleth</name>
-			<url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
+			<!-- <url>https://build.shibboleth.net/nexus/content/repositories/releases/</url> -->
+      <url>https://build.shibboleth.net/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
   <dependencies>
-
+  <dependency>
+    <groupId>se.jiderhamn.classloader-leak-prevention</groupId>
+    <artifactId>classloader-leak-prevention-servlet3</artifactId>
+    <version>2.7.0</version>
+</dependency>
     <dependency>
       <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
       <artifactId>identity-inbound-auth-saml</artifactId>
